# ChangeLog for sys-apps/calculate-install
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-2.2.0.0_p20100930-r9 (05 Oct 2010)

  05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r8.ebuild,
  +calculate-install-2.2.0.0_p20100930-r9.ebuild:
  Update commit reference for handbook refresh.

*calculate-install-2.2.0.0_p20100930-r8 (05 Oct 2010)

  05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r7.ebuild,
  +calculate-install-2.2.0.0_p20100930-r8.ebuild:
  Update daily.

*calculate-install-2.2.0.0_p20100930-r7 (05 Oct 2010)

  05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r6.ebuild,
  +calculate-install-2.2.0.0_p20100930-r7.ebuild:
  Daily update.

*calculate-install-2.2.0.0_p20100930-r6 (04 Oct 2010)

  04 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r5.ebuild,
  +calculate-install-2.2.0.0_p20100930-r6.ebuild:
  Daily update.

*calculate-install-2.2.0.0_p20100930-r5 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r4.ebuild,
  +calculate-install-2.2.0.0_p20100930-r5.ebuild:
  Update version for fix partition mounting. Ssh key moving. Added handbook.

*calculate-install-2.2.0.0_p20100930-r3 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r2.ebuild,
  +calculate-install-2.2.0.0_p20100930-r4.ebuild:
  Update version for ntfs mount points support.

*calculate-install-2.2.0.0_p20100930-r2 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.0.0_p20100930-r1.ebuild,
  +calculate-install-2.2.0.0_p20100930-r2.ebuild:
  Update version for fix work of --live option.

*calculate-install-2.2.0.0_p20100930-r1 (01 Oct 2010)
