@@ -1,6 +1,6 @@
 EBUILD calculate-install-2.2.0.0_p20100902-r1.ebuild 690 RMD160 a75346da5a2756c9bcc52239a971cf46b803b26d SHA1 d61acbb1f075f198ef35575f4f4120f598716a66 SHA256 a2f7b5f63a5c643a111015b553b98f7b895ba2d8ba5000c172d5944c97586380
 EBUILD calculate-install-2.2.0.0_p20100915.ebuild 690 RMD160 d0870b66c4a175e05c9de5bb913cb2dd501e2a94 SHA1 9bfc17ce343fdc2d51c3120d99d4f7ac300b96fe SHA256 368d418b4c50a3847ff171db85be8c950b95e8027c669f2d29929c96b43da9a2
-EBUILD calculate-install-2.2.0.0_p20100930-r9.ebuild 760 RMD160 5da5363d59665e115b7d2e720c8ef228da573b80 SHA1 f9262dac07d3a72cbe73baeb73f27b6b7a29710c SHA256 d1e8c5d0f820370c545707f1a90e62a2eb419dbcd71082a2b9d8089d4d67deca
+EBUILD calculate-install-2.2.0.0_p20100930-r10.ebuild 760 RMD160 60b6a25d942d025129186c050b9f83c0d328f50d SHA1 fb9035dbdbd8477047931269c8cdd724b668480f SHA256 cbd2d7fc0cc66231eead097f4e5d1e194c3c035d88fff5b944f70a5b9e71e5f3
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
-MISC ChangeLog 8411 RMD160 dae16d93bc95e07f5aa5e202eb7aa4ad21aca1d1 SHA1 7cddae799b2feeed296b0892ca3e705a57e07347 SHA256 fe5cbe3713a721177a490021730b040cf9e752c2c9356e4f9eea8d284e8731db
+MISC ChangeLog 8676 RMD160 8a3fa316d1ee87e6bcd51780893de3dc9f1be77a SHA1 aa21bb208182ee67a5d3b2e03cc55ffd01fde969 SHA256 320a27ca719380200b84c7adf5c611959b12064f7694238c914594c76558136f
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
