@@ -10,8 +10,8 @@ EBUILD calculate-lib-2.1.9-r1.ebuild 730 RMD160 04e6029a7220a267356eb463d1bad3e9
 EBUILD calculate-lib-2.2.0.0_p20100826-r1.ebuild 788 RMD160 56d44285f4fd8021566f1513eae52257458b0fca SHA1 12b807476ee9b8044c75a52e47fead4888d19302 SHA256 7efc149c671b088c2830ea3c0a4046c64858acd6bf9d16c09aa5ea9e17eed9e4
 EBUILD calculate-lib-2.2.0.0_p20100902-r1.ebuild 864 RMD160 72ecda2f339257ab188792b0c25e9a5508495a41 SHA1 1eb455bf10a6dd1af94ca4abae9c33f1fc47ae2f SHA256 6358f5da87c71a429887f2a51f0c0f56e88e3bf077cfeb655926a7ac948e9681
 EBUILD calculate-lib-2.2.0.0_p20100915.ebuild 864 RMD160 5f540750a4849a3069616aadbd0bc60a24bb5838 SHA1 7df7cbed8d4be275e406bd198867269cf8dece8e SHA256 a5db486bb417a33869b7bb3d0395a4a35f841bb76dbba7880efa3b92b74a6d43
-EBUILD calculate-lib-2.2.0.0_p20100930-r4.ebuild 917 RMD160 e878d490b5afedcd46885c2ee5c3f201d23afcec SHA1 3ca95c5ca9fd4f37fba59978e0ba10116a116d3f SHA256 df671fe8686e4162931a0f7c642e8b39afe7d540dadb87bddbb15fd86ecef64b
+EBUILD calculate-lib-2.2.0.0_p20100930-r5.ebuild 917 RMD160 a7f5922a7038cd99767270ef7bfe66299cd603a0 SHA1 26a14a8acf9849fc687f652bfb08a3848f03045e SHA256 2c33722336ceb16ae6ec3ee4f7a9487f371acdeec42b1051904d64184394ebba
 EBUILD calculate-lib-2.2.9999.ebuild 592 RMD160 e559e7ccafdb150093a055b4f90bf33666ab796c SHA1 752fe9e05ce1380af9a44bf5e81a56dc00f36506 SHA256 f4cf5511cca3007b735cf98871ee72442c6bf677be63349058d1bb029a4b1abf
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 7876 RMD160 e7ba46b914932943244aa3789361b18a04bd5d0c SHA1 c99526d22786bfd4d0fc435f2530839e711f707f SHA256 16f717ee14f2ecc865c46d26779a8168b88e6f1e185749d4340796b1d1d213de
+MISC ChangeLog 8116 RMD160 8b29e6d3295ee92fd81428f211d9cdda1c3f4ebc SHA1 f3b88d864cad5505ef21e79530ac0ff2595a53f9 SHA256 5b24b7a39ee23630c1f664be3d1cd041130a9e6234ed4460535abddfcd8c9e1f
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
