@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.0_p20100930-r5 (05 Oct 2010)
+
+  05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-lib-2.2.0.0_p20100930-r4.ebuild,
+  +calculate-lib-2.2.0.0_p20100930-r5.ebuild:
+  Update depends for new templates.
+
 *calculate-lib-2.2.0.0_p20100930-r4 (05 Oct 2010)
 
   05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
