@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.0.0_p20100930-r10 (05 Oct 2010)
+
+  05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-2.2.0.0_p20100930-r9.ebuild,
+  +calculate-install-2.2.0.0_p20100930-r10.ebuild:
+  Update commit reference for update handbook.
+
 *calculate-install-2.2.0.0_p20100930-r9 (05 Oct 2010)
 
   05 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
